--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <p>Você pode me encontrar nas seguintes redes sociais:</p>
     <ul class="social-icons">
       <li><a href="https://linkedin.com/in/hgoltara" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-      <li><a href="https://github.com/HigorGoltara" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
+      <li><a href="https://github.com/HGoltara" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
       <li><a href="https://instagram.com/hgoltara" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
     </ul>
   </section>
