--- a/index.html
+++ b/index.html
@@ -17,13 +17,12 @@
     <h1 id="typed-title"></h1>
     <div class="sobre-conteudo">
       <div class="texto">
-        <p>Meu nome é Higor, tenho 25 anos e sou desenvolvedor web.</p>
-        <p>Meu contato com tech surgiu desde pequeno, quando recebi meu primeiro computador, que na época rodava Linux. 
-          De lá pra cá, minha paixão só cresceu, e hoje me encontro aqui, trabalhando como webdev.</p>
-        <p>Atualmente, estou estudando JavaScript e React, e tenho interesse em aprender mais sobre desenvolvimento de aplicativos móveis.</p>
-        <p>Quando não estou programando, gosto de jogar videogame, ler livros de ficção científica e explorar novas tecnologias.</p>
-        <p>Estou sempre em busca de novos desafios e oportunidades para crescer como desenvolvedor.</p>
-      </div>
+  <p>Olá! Sou o Higor, tenho 25 anos e sou desenvolvedor web — ou, se preferir, domador de bugs com café na mão e código na cabeça.</p>
+  <p>Minha paixão por tecnologia começou cedo, com um velho computador rodando Linux que mais travava do que funcionava — mas foi o suficiente para despertar minha curiosidade (e paciência).</p>
+  <p>Hoje me dedico ao estudo de JavaScript e React, sempre buscando transformar ideias em interfaces funcionais e bonitas. Também venho explorando o mundo do desenvolvimento mobile, querendo criar apps rápidos, intuitivos e que não travem no meio do uso — sonho de todos nós, né?</p>
+  <p>Fora do código, curto videogames, livros de ficção científica e fuçar novas tecnologias. Sim, até nos hobbies a curiosidade dá um jeito de aparecer.</p>
+  <p>Sou movido por desafios e aprendizado constante. Se envolve código, criatividade e a chance de melhorar como dev, pode contar comigo.</p>
+</div>
       <div class="imagem">
         <img src="assets/eu2.jpg" alt="Foto de Higor Goltara">
       </div>
@@ -35,7 +34,7 @@
     <p>Você pode me encontrar nas seguintes redes sociais:</p>
     <ul class="social-icons">
       <li><a href="https://linkedin.com/in/hgoltara" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-      <li><a href="https://github.com/HGoltara" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
+      <li><a href="https://github.com/HigorGoltara" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
       <li><a href="https://instagram.com/hgoltara" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
     </ul>
   </section>
