Novas paginas e melhorias

--- a/index.html
+++ b/index.html
@@ -10,34 +10,36 @@
 <body>
 
   <header>
-    <button id="toggleTheme" title="Alternar tema">🌓</button>
-  </header>
+  <button id="toggleTheme" title="Alternar tema">🌓</button>
+  <nav class="nav-main">
+    <ul>
+      <li><a href="index.html" class="active">Sobre Mim</a></li>
+      <li><a href="projects.html">Projetos</a></li>
+      <li><a href="#Contato">Contato</a></li>
+    </ul>
+  </nav>
+</header>
 
-  <section id="Sobre">
-    <h1 id="typed-title"></h1>
-    <div class="sobre-conteudo">
-      <div class="texto">
-  <p>Olá! Sou o Higor, tenho 25 anos e sou desenvolvedor web — ou, se preferir, domador de bugs com café na mão e código na cabeça.</p>
-  <p>Minha paixão por tecnologia começou cedo, com um velho computador rodando Linux que mais travava do que funcionava — mas foi o suficiente para despertar minha curiosidade (e paciência).</p>
-  <p>Hoje me dedico ao estudo de JavaScript e React, sempre buscando transformar ideias em interfaces funcionais e bonitas. Também venho explorando o mundo do desenvolvimento mobile, querendo criar apps rápidos, intuitivos e que não travem no meio do uso — sonho de todos nós, né?</p>
-  <p>Fora do código, curto videogames, livros de ficção científica e fuçar novas tecnologias. Sim, até nos hobbies a curiosidade dá um jeito de aparecer.</p>
-  <p>Sou movido por desafios e aprendizado constante. Se envolve código, criatividade e a chance de melhorar como dev, pode contar comigo.</p>
-</div>
-      <div class="imagem">
+<section id="about" class="about-section">
+  <div class="about-container">
+    <h2>Sobre Mim</h2>
+    <p>
+      Olá, eu sou o <strong>Higor</strong>, um desenvolvedor web de 25 anos que adora resolver problemas — geralmente com café na mão e o VS Code aberto.  
+      Minha jornada na tecnologia começou cedo, com um computador Linux meio desajeitado que testava mais minha paciência do que outra coisa — mas foi o suficiente para despertar uma paixão que só cresceu.
+    </p>
+    <p>
+      Hoje, meu foco está em <strong>JavaScript</strong> e <strong>React</strong>, transformando ideias em interfaces limpas e funcionais — com um interesse crescente pelo desenvolvimento mobile para criar experiências mais rápidas e intuitivas.
+    </p>
+    <p>
+      Quando não estou codando ou resolvendo bugs, você me encontra jogando videogame, lendo livros de ficção científica ou explorando as últimas novidades do mundo tech.  
+      Estou sempre em busca de novos desafios e oportunidades para aprender, crescer e construir projetos relevantes.
+    </p>
+  </div>
+  <div class="imagem">
         <img src="assets/eu2.jpg" alt="Foto de Higor Goltara">
       </div>
     </div>
-  </section>
-
-  <section id="Contato">
-    <h2>Contato</h2>
-    <p>Você pode me encontrar nas seguintes redes sociais:</p>
-    <ul class="social-icons">
-      <li><a href="https://linkedin.com/in/hgoltara" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
-      <li><a href="https://github.com/HigorGoltara" target="_blank"><i class="fab fa-github"></i> GitHub</a></li>
-      <li><a href="https://instagram.com/hgoltara" target="_blank"><i class="fab fa-instagram"></i> Instagram</a></li>
-    </ul>
-  </section>
+</section>
 
   <footer>
     <p>&copy; 2025 Higor Goltara. Todos os direitos reservados.</p>
