--- a/contact.html
+++ b/contact.html
@@ -9,35 +9,36 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
   />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <button id="toggleTheme" title="Alternar tema">🌓</button>
+    <button id="toggleTheme" title="Alternar tema" aria-label="Alternar tema">🌓</button>
     <nav class="nav-main">
       <ul>
         <li><a href="index.html">Sobre Mim</a></li>
-        <li><a href="projetos.html">Projetos</a></li>
+        <li><a href="projects.html">Projetos</a></li>
         <li><a href="contact.html" class="active">Contato</a></li>
       </ul>
     </nav>
   </header>
 
   <section id="Contato" class="contato-section">
-    <div class="contato-container">
-      <h2>Contato</h2>
+    <div class="contato-container card">
+      <h2><i class="fas fa-envelope"></i> Contato</h2>
       <p>Gostaria de trocar uma ideia? Manda uma mensagem para mim:</p>
 
-      <form id="contactForm" action="mailto:seuemail@exemplo.com" method="POST" enctype="text/plain">
-        <label for="name">Nome:</label>
-        <input type="text" id="name" name="name" required placeholder="Seu nome" />
+      <form id="contactForm" action="mailto:seuemail@exemplo.com" method="POST" enctype="text/plain" autocomplete="on">
+        <label for="name"><i class="fas fa-user"></i> Nome:</label>
+        <input type="text" id="name" name="name" required placeholder="Seu nome" autocomplete="name" />
 
-        <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email" required placeholder="seu@email.com" />
+        <label for="email"><i class="fas fa-envelope"></i> E-mail:</label>
+        <input type="email" id="email" name="email" required placeholder="seu@email.com" autocomplete="email" />
 
-        <label for="message">Mensagem:</label>
-        <textarea id="message" name="message" rows="5" required placeholder="Escreva sua mensagem aqui..."></textarea>
+        <label for="message"><i class="fas fa-comment"></i> Mensagem:</label>
+        <textarea id="message" name="message" rows="5" required placeholder="Escreva sua mensagem aqui..." autocomplete="off"></textarea>
 
-        <button type="submit">Enviar</button>
+        <button type="submit"><i class="fas fa-paper-plane"></i> Enviar</button>
       </form>
 
       <hr />
@@ -45,19 +46,19 @@
       <p>Ou me encontre nas redes sociais:</p>
       <ul class="social-icons">
         <li>
-          <a href="https://linkedin.com/in/hgoltara" target="_blank"
-            ><i class="fab fa-linkedin"></i> LinkedIn</a
-          >
+          <a href="https://linkedin.com/in/hgoltara" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-linkedin" aria-hidden="true"></i> LinkedIn
+          </a>
         </li>
         <li>
-          <a href="https://github.com/HigorGoltara" target="_blank"
-            ><i class="fab fa-github"></i> GitHub</a
-          >
+          <a href="https://github.com/HigorGoltara" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-github" aria-hidden="true"></i> GitHub
+          </a>
         </li>
         <li>
-          <a href="https://instagram.com/hgoltara" target="_blank"
-            ><i class="fab fa-instagram"></i> Instagram</a
-          >
+          <a href="https://instagram.com/hgoltara" target="_blank" rel="noopener noreferrer">
+            <i class="fab fa-instagram" aria-hidden="true"></i> Instagram
+          </a>
         </li>
       </ul>
     </div>
@@ -67,7 +68,7 @@
     <p>&copy; 2025 Higor Goltara. Todos os direitos reservados.</p>
   </footer>
 
-  <button id="backToTop" title="Voltar ao topo">↑</button>
+  <button id="backToTop" title="Voltar ao topo" aria-label="Voltar ao topo">↑</button>
 
   <script src="script.js"></script>
 </body>
