--- a/index.html
+++ b/index.html
@@ -10,42 +10,41 @@
 <body>
 
   <header>
-  <button id="toggleTheme" title="Alternar tema">🌓</button>
-  <nav class="nav-main">
-    <ul>
-      <li><a href="index.html" class="active">Sobre Mim</a></li>
-      <li><a href="projects.html">Projetos</a></li>
-      <li><a href="#Contato">Contato</a></li>
-    </ul>
-  </nav>
-</header>
+    <button id="toggleTheme" title="Alternar tema" aria-label="Alternar tema">🌓</button>
+    <nav class="nav-main">
+      <ul>
+        <li><a href="index.html" class="active">Sobre Mim</a></li>
+        <li><a href="projects.html">Projetos</a></li>
+        <li><a href="#Contato">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<section id="about" class="about-section">
-  <div class="about-container">
-    <h2>Sobre Mim</h2>
-    <p>
-      Olá, eu sou o <strong>Higor</strong>, um desenvolvedor web de 25 anos que adora resolver problemas — geralmente com café na mão e o VS Code aberto.  
-      Minha jornada na tecnologia começou cedo, com um computador Linux meio desajeitado que testava mais minha paciência do que outra coisa — mas foi o suficiente para despertar uma paixão que só cresceu.
-    </p>
-    <p>
-      Hoje, meu foco está em <strong>JavaScript</strong> e <strong>React</strong>, transformando ideias em interfaces limpas e funcionais — com um interesse crescente pelo desenvolvimento mobile para criar experiências mais rápidas e intuitivas.
-    </p>
-    <p>
-      Quando não estou codando ou resolvendo bugs, você me encontra jogando videogame, lendo livros de ficção científica ou explorando as últimas novidades do mundo tech.  
-      Estou sempre em busca de novos desafios e oportunidades para aprender, crescer e construir projetos relevantes.
-    </p>
-  </div>
-  <div class="imagem">
-        <img src="assets/eu2.jpg" alt="Foto de Higor Goltara">
-      </div>
+  <section id="about" class="about-section">
+    <div class="about-container">
+      <h2>Sobre Mim</h2>
+      <p>
+        Olá, eu sou o <strong>Higor</strong>, um desenvolvedor web de 25 anos que adora resolver problemas — geralmente com café na mão e o VS Code aberto.  
+        Minha jornada na tecnologia começou cedo, com um computador Linux meio desajeitado que testava mais minha paciência do que outra coisa — mas foi o suficiente para despertar uma paixão que só cresceu.
+      </p>
+      <p>
+        Hoje, meu foco está em <strong>JavaScript</strong> e <strong>React</strong>, transformando ideias em interfaces limpas e funcionais — com um interesse crescente pelo desenvolvimento mobile para criar experiências mais rápidas e intuitivas.
+      </p>
+      <p>
+        Quando não estou codando ou resolvendo bugs, você me encontra jogando videogame, lendo livros de ficção científica ou explorando as últimas novidades do mundo tech.  
+        Estou sempre em busca de novos desafios e oportunidades para aprender, crescer e construir projetos relevantes.
+      </p>
     </div>
-</section>
+    <div class="imagem">
+      <img src="assets/eu2.jpg" alt="Foto de Higor Goltara sorrindo" loading="lazy">
+    </div>
+  </section>
 
   <footer>
     <p>&copy; 2025 Higor Goltara. Todos os direitos reservados.</p>
   </footer>
 
-  <button id="backToTop" title="Voltar ao topo">↑</button>
+  <button id="backToTop" title="Voltar ao topo" aria-label="Voltar ao topo">↑</button>
 
   <script src="script.js"></script>
 </body>
