--- a/projects.html
+++ b/projects.html
@@ -5,52 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Higor Goltara | Projetos</title>
   <link rel="stylesheet" href="style.css" />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
   <header>
-  <button id="toggleTheme" title="Alternar tema">🌓</button>
-  <nav class="nav-main">
-    <ul>
-      <li><a href="index.html" class="active">Sobre Mim</a></li>
-      <li><a href="projetos.html">Projetos</a></li>
-      <li><a href="contact.html">Contato</a></li>
-    </ul>
-  </nav>
-</header>
+    <button id="toggleTheme" title="Alternar tema" aria-label="Alternar tema">🌓</button>
+    <nav class="nav-main">
+      <ul>
+        <li><a href="index.html">Sobre Mim</a></li>
+        <li><a href="projects.html" class="active">Projetos</a></li>
+        <li><a href="contact.html">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <section id="projects" class="projects-section">
-    <div class="projects-container">
-      <h2>Meus Projetos</h2>
-      
-      <div class="project-card">
-        <h3>Projeto 1: Site Portfólio</h3>
-        <p>Um site pessoal para apresentar meu trabalho e habilidades em desenvolvimento web.</p>
-        <a href="https://github.com/HGoltara" target="_blank" class="btn">Ver no GitHub <i class="fab fa-github"></i></a>
-      </div>
+  <main>
+    <section id="projects" class="projects-section">
+      <div class="projects-container">
+        <h2>Meus Projetos</h2>
+        
+        <div class="project-card">
+          <h3>Projeto 1: Site Portfólio</h3>
+          <p>Um site pessoal para apresentar meu trabalho e habilidades em desenvolvimento web.</p>
+          <a href="https://github.com/HGoltara" target="_blank" class="btn" rel="noopener noreferrer">
+            Ver no GitHub <i class="fab fa-github" aria-hidden="true"></i>
+          </a>
+        </div>
 
-      <div class="project-card">
-        <h3>Projeto 2: App Mobile</h3>
-        <p>Um aplicativo móvel simples para gerenciar tarefas diárias, desenvolvido em React Native.</p>
-        <a href="#" class="btn disabled">Em breve</a>
-      </div>
+        <div class="project-card">
+          <h3>Projeto 2: App Mobile</h3>
+          <p>Um aplicativo móvel simples para gerenciar tarefas diárias, desenvolvido em React Native.</p>
+          <a href="#" class="btn disabled" tabindex="-1" aria-disabled="true">Em breve</a>
+        </div>
 
-      <div class="project-card">
-        <h3>Projeto 3: Blog de Tecnologia</h3>
-        <p>Blog com artigos sobre programação, dicas e novidades do mundo tech.</p>
-        <a href="https://blog.exemplo.com" target="_blank" class="btn">Visitar Blog</a>
+        <div class="project-card">
+          <h3>Projeto 3: Blog de Tecnologia</h3>
+          <p>Blog com artigos sobre programação, dicas e novidades do mundo tech.</p>
+          <a href="https://blog.exemplo.com" target="_blank" class="btn" rel="noopener noreferrer">
+            Visitar Blog
+          </a>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
+  </main>
 
   <footer>
     <p>&copy; 2025 Higor Goltara. Todos os direitos reservados.</p>
   </footer>
 
-  <button id="backToTop" title="Voltar ao topo">↑</button>
+  <button id="backToTop" title="Voltar ao topo" aria-label="Voltar ao topo">↑</button>
 
   <script src="script.js"></script>
 </body>
