Pequenas correções e adição de funções
Adição de um botão de contato do Whatsapp, pequenas correções estéticas.

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   </header>
 
   <section id="Contato" class="contato-section">
-    <div class="contato-container card">
+    <div class="contato-container card highlight-block">
       <h2><i class="fas fa-envelope"></i> Contato</h2>
       <p>Gostaria de trocar uma ideia? Manda uma mensagem para mim:</p>
 
