--- a/index.html
+++ b/index.html
@@ -20,25 +20,33 @@
     </nav>
   </header>
 
-  <section id="about" class="about-section">
-    <div class="about-container">
-      <h2>Sobre Mim</h2>
-      <p>
-        Olá, eu sou o <strong>Higor</strong>, um desenvolvedor web de 25 anos que adora resolver problemas — geralmente com café na mão e o VS Code aberto.  
-        Minha jornada na tecnologia começou cedo, com um computador Linux meio desajeitado que testava mais minha paciência do que outra coisa — mas foi o suficiente para despertar uma paixão que só cresceu.
-      </p>
-      <p>
-        Hoje, meu foco está em <strong>JavaScript</strong> e <strong>React</strong>, transformando ideias em interfaces limpas e funcionais — com um interesse crescente pelo desenvolvimento mobile para criar experiências mais rápidas e intuitivas.
-      </p>
-      <p>
-        Quando não estou codando ou resolvendo bugs, você me encontra jogando videogame, lendo livros de ficção científica ou explorando as últimas novidades do mundo tech.  
-        Estou sempre em busca de novos desafios e oportunidades para aprender, crescer e construir projetos relevantes.
-      </p>
-    </div>
-    <div class="imagem">
-      <img src="assets/eu2.jpg" alt="Foto de Higor Goltara sorrindo" loading="lazy">
-    </div>
-  </section>
+  <!-- index.html -->
+<section id="about" class="about-section">
+  <div class="about-container highlight-block">
+    <h2>Sobre Mim</h2>
+    <p>
+      Olá, eu sou o <strong>Higor</strong>, um desenvolvedor web de 25 anos que adora resolver problemas — geralmente com café na mão e o VS Code aberto.  
+      Minha jornada na tecnologia começou cedo, com um computador Linux meio desajeitado que testava mais minha paciência do que outra coisa — mas foi o suficiente para despertar uma paixão que só cresceu.
+    </p>
+    <p>
+      Hoje, meu foco está em <strong>JavaScript</strong> e <strong>React</strong>, transformando ideias em interfaces limpas e funcionais — com um interesse crescente pelo desenvolvimento mobile para criar experiências mais rápidas e intuitivas.
+    </p>
+    <p>
+      Quando não estou codando ou resolvendo bugs, você me encontra jogando videogame, lendo livros de ficção científica ou explorando as últimas novidades do mundo tech.  
+      Estou sempre em busca de novos desafios e oportunidades para aprender, crescer e construir projetos relevantes.
+    </p>
+  </div>
+  <div class="imagem">
+    <img src="assets/eu2.jpg" alt="Foto de Higor Goltara sorrindo" loading="lazy">
+  </div>
+</section>
+
+<div class="whatsapp-button">
+	<a href="https://wa.me//5528999739440?text=" target="_blank">
+		<img src="https://i7websites.com/public/img/ccfe9143.png" alt="WhatsApp">
+		<p>Fale <br><span>conosco</span></p>
+	</a>
+</div>
 
   <footer>
     <p>&copy; 2025 Higor Goltara. Todos os direitos reservados.</p>
