--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
 
   <main>
     <section id="projects" class="projects-section">
-      <div class="projects-container">
+      <div class="projects-container highlight-block">
         <h2>Meus Projetos</h2>
         
         <div class="project-card">
