--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,13 @@
     </div>
   </section>
 
+  <div class="whatsapp-button">
+	<a href="https://wa.me//5528981173969?text=" target="_blank">
+		<img src="https://i7websites.com/public/img/ccfe9143.png" alt="WhatsApp">
+		<p>Fale <br><span>conosco</span></p>
+	</a>
+</div>
+
   <footer>
     <p>&copy; 2025 Higor Goltara. Todos os direitos reservados.</p>
   </footer>
