--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
         <li><a href="index.html">Sobre Mim</a></li>
         <li><a href="projects.html">Projetos</a></li>
         <li><a href="contact.html" class="active">Contato</a></li>
+        <li><a href="services.html">Serviços</a></li>
       </ul>
     </nav>
   </header>
