--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="index.html" class="active">Sobre Mim</a></li>
         <li><a href="projects.html">Projetos</a></li>
         <li><a href="#Contato">Contato</a></li>
+        <li><a href="services.html">Serviços</a></li>
       </ul>
     </nav>
   </header>
