--- a/projects.html
+++ b/projects.html
@@ -15,6 +15,7 @@
         <li><a href="index.html">Sobre Mim</a></li>
         <li><a href="projects.html" class="active">Projetos</a></li>
         <li><a href="contact.html">Contato</a></li>
+        <li><a href="services.html">Serviços</a></li>
       </ul>
     </nav>
   </header>
