--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
       <ul>
         <li><a href="index.html" class="active">Sobre Mim</a></li>
         <li><a href="projects.html">Projetos</a></li>
-        <li><a href="#Contato">Contato</a></li>
+        <li><a href="contact.html">Contato</a></li>
         <li><a href="services.html">Serviços</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- index.html -->
 <section id="about" class="about-section">
   <div class="about-container highlight-block">
     <h2>Sobre Mim</h2>
